# fineract-unit-tests-openai

./: .gitignore  README.adoc  README.md  automate.sh  basic_questions.adoc  basic_questions.txt  build_breakfree-dk-with-openai-chat_toolbox.sh  build_fineract-unit-tests-openai_toolbox.sh  chunk.py  demo.py  export-method-names-bodies.py  faiss.pkl  fineract-unit-test-openai-using-prompt-engineering.results  main.py  process.py  prompt.py  prompt_show_context.py  prompter.py  pyproject.toml  requirements.txt  statistics.py  train.py  unit-tests-only.json  unit-tests-only.jsonl  unit-tests-only_prepared.jsonl
archive/: export-method-names-bodies.py  master.prompt  model-list.txt  openai_model_prompt.py  server.py  statistics.py
results/: basic_questions.adoc  testAccountType-fromInt.questions  testParts-mediaType.questions
setup/: README.adoc  README.md  build_fineract-unit-tests-openai_toolbox.sh  requirements.txt
src/archive/: model-list.txt
src/llm-prompt-creator/: chunker.py  prompt.py
src/llm_prompt_creator/: chunker.py  prompt.py
training/: master.txt
training/facts/: test_a1.txt
training/investigate/: SavingsAccountReadPlatformServiceImpl_extractData.java
