[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "training/",
    "setup/",
    "results/",
    "db/",
    "archive/",
    "statistics.py",
    "venv/",
]

[project]
name = "llm_prompt_creator"
version = "0.2.5"
authors = [
    { name="Chris Mills", email="cmills@breakfreesolutions.com"}
]
description = "Takes a given directory and parses its contents to create a text vectorstore to be consumed into a prompt for various LLM models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "java-code-chunker",
]

[project.urls]
"Homepage" = "https://github.com/break-free/fineract-unit-tests-openai"
"Issues" = "https://github.com/break-free/fineract-unit-tests-openai/issues"
